--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     <div class="container">
         <div class="settings">
             <button class="button-28" onclick="changeColor('Black')" id="colorMode" role="button">Black</button>
-            <button class="button-28" role="button">Clear</button>
-            <button class="button-28" onclick="changeColor('white')" role="button">Eraser</button>
             <button class="button-28" onclick="changeColor('random')" role="button">Rainbow mode</button>
-            <div class="slideContainer">
-                <input type="text" placeholder="Size of Board" min="1" max="100" value="1" id="myRange" class="text">
-                <button>Set Size</button>
-            </div>
+            <button class="button-28" onclick="changeColor('white')" role="button">Eraser</button>
+            <button class="button-28" onclick="resetBoard()" role="button">Clear</button>
+            <input type="range" step="4" id="value" onchange="onValueChange(this)" name="value" min="1" max="64">
+
         </div>
         <div class="board" id="board"></div>
     </div>
